--- a/atlas/package.json
+++ b/atlas/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-react": "^5.20.2",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.1.0",
