--- a/atlas/package.json
+++ b/atlas/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^7.1.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typeface-audiowide": "^1.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
