--- a/atlas/package.json
+++ b/atlas/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.20.2",
     "@heroicons/react": "^2.2.0",
+    "@nextui-org/modal": "^2.2.6",
+    "@nextui-org/system": "^2.4.5",
+    "@nextui-org/theme": "^2.4.4",
     "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.1.0",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
     "next-themes": "^0.4.4",
     "openai": "^4.76.3",
