--- a/atlas/package.json
+++ b/atlas/package.json
@@ -21,6 +21,8 @@
     "clsx": "^2.1.1",
     "firebase": "^11.1.0",
     "framer-motion": "^11.15.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.468.0",
     "next-themes": "^0.4.4",
     "openai": "^4.76.3",
@@ -29,6 +31,7 @@
     "react-google-places-autocomplete": "^4.1.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.0",
+    "react-share": "^5.1.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
