--- a/atlas/package.json
+++ b/atlas/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.20.2",
+    "@clerk/clerk-sdk-node": "^5.1.6",
+    "@clerk/express": "^1.3.49",
     "@heroicons/react": "^2.2.0",
     "@nextui-org/modal": "^2.2.6",
     "@nextui-org/system": "^2.4.5",
@@ -19,6 +21,9 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "firebase": "^11.1.0",
     "framer-motion": "^11.15.0",
     "html2canvas": "^1.4.1",
@@ -32,6 +37,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.0",
     "react-share": "^5.1.1",
+    "react-toastify": "^11.0.3",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
