--- a/atlas/package.json
+++ b/atlas/package.json
@@ -17,7 +17,7 @@
     "@nextui-org/modal": "^2.2.6",
     "@nextui-org/system": "^2.4.5",
     "@nextui-org/theme": "^2.4.4",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -38,8 +38,10 @@
     "react-router-dom": "^7.1.0",
     "react-share": "^5.1.1",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
+    "tailwind-variants": "^0.3.1",
     "tailwindcss-animate": "^1.0.7",
     "typeface-audiowide": "^1.1.13"
   },
