--- a/atlas/package.json
+++ b/atlas/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "firebase": "^11.1.0",
     "lucide-react": "^0.468.0",
     "next-themes": "^0.4.4",
