--- a/atlas/package.json
+++ b/atlas/package.json
@@ -28,6 +28,7 @@
     "express": "^4.21.2",
     "firebase": "^11.1.0",
     "framer-motion": "^11.18.2",
+    "helmet": "^8.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.468.0",
